# workspace-state-graph

./: CLAUDE.md  Cargo.toml  README.md
docs/: composition-model.md  integration-guide.md  verification-guarantees.md
src/: analysis.rs  builder.rs  composition.rs  lib.rs  pleme.rs  types.rs  verify.rs
tests/: composition_proofs.rs  exhaustive_graph_proofs.rs  graph_proofs.rs  pleme_topology.rs  quero_topology.rs
