[package]
name = "workspace-state-graph"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Typed workspace dependency DAG with verification"
license = "MIT"
repository = "https://github.com/pleme-io/workspace-state-graph"

[lints.clippy]
pedantic = "warn"

[dependencies]
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
proptest = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
